# ZKCup-2019

./: LICENSE  README.md
LeArm code/LeArmSerial/: AheadPick.txt  AheadPick.xml  LeftPick.txt  LeftPick.xml  RightPut.txt  RightPut.xml  com01.py  com02.py  com_ard.py  temp0.xml
LeArm code/LeArmSerial/new/: new1.xml
base plate code/Base_Driver/: CMakeLists.txt  base_machine.cpp  base_machine.h
base plate code/GY-273三轴电子指南针资料/相关数据手册/: HMC5883L.txt
base plate code/Mega_Base/: Mega_Base.ino  QMC5883L.cpp  QMC5883L.h  Wire.cpp  base_machine.cpp  base_machine.h  digital_compass.cpp  digital_compass.h  distance_forward.cpp  distance_forward.h  ultra_sonic.cpp
base plate code/Mega_Base_now/: Mega_Base_now.ino  base_machine.cpp  base_machine.h  distance_util.cpp  distance_util.h  ultra_sonic.h
docs/: plan3.md  zbconclusion.md
docs/一审方案/: plan.md
image identification code/Train/: list.txt  myconvert.py  new_convert.py  newconvert.py  out.txt  realconvert.py  test.py  test_file.py  testconvert.py  train.py
image identification code/Train/bat/: convert.bat  random.bat  rename.bat
image identification code/Train/node_checker/: check.py  node.py
image identification code/Train/train_log/02_Feb07/: 02_Feb07.txt  out1.txt  out2.txt  out3.txt  problems.txt
image identification code/Train/train_log/03_Feb08/: 03.txt  out1.txt  out2.txt
upper computer code/zkcup_upper/: upper.md
upper computer code/zkcup_upper/Pi_upper/: test.py  upper_main.py  with_Android.py  with_LeArm.py  with_Mega_Base.py  with_Uno_Dis.py
(+15 files in other folders)
